tests/NormalTests/paczka1/fuzzy1/72449229.err
Error in line 12: 6qxTPqvrNoH A157 47,6
Error in line 37: A490 A157 96,3
